Added Mysql system config for container initialization.
