# api_server/config.py
@@ -81,6 +81,12 @@ daspanel.def_cfg['s3']['endpoint'] = 'https://s3.svc.{0}'.format(daspanel.def_cf
 daspanel.def_cfg['s3']['region'] = 'us-east-1'
 daspanel.def_cfg['s3']['access_key'] = os.getenv('DASPANEL_SYS_UUID')[0:20]
 daspanel.def_cfg['s3']['secret_key'] = daspanel.def_cfg['sys']['password']
+daspanel.def_cfg['mysql'] = {}
+daspanel.def_cfg['mysql']['server'] = 'daspanel-mysql'
+daspanel.def_cfg['mysql']['port'] = 3306
+daspanel.def_cfg['mysql']['user'] = 'root'
+daspanel.def_cfg['mysql']['password'] = daspanel.def_cfg['sys']['password']
+
 
 # MySql
 mysql = ConfigSection("MySQL specific configuration")
